--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-react-app",
+  "name": "stasher-react-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,15 +29,22 @@
     ]
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "@apollo/client": "^3.7.1",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "express": "^4.17.3",
+    "graphql": "^16.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "typescript": "^4.9.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8000"
