--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js",
     "dev:api": "react-scripts start",
     "dev": "REACT_APP_API_HOST=http://localhost:8000 react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,8 +43,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "typescript": "^4.9.3",
+    "cra-bundle-analyzer": "^0.1.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8000"
