--- a/package.json
+++ b/package.json
@@ -30,14 +30,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@chakra-ui/icons": "^2.0.13",
+    "@chakra-ui/react": "^2.4.2",
+    "@chakra-ui/theme": "^2.2.2",
+    "@chakra-ui/theme-tools": "^2.0.14",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "express": "^4.17.3",
+    "framer-motion": "^7.6.18",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
