--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "start": "node server.js",
     "dev:api": "react-scripts start",
-    "dev": "REACT_APP_API_HOST=http://localhost:8000 react-scripts start",
+    "dev": "REACT_APP_API_HOST=http://localhost:8000 concurrently \"yarn react-scripts start\" \"yarn codegen\" ",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -36,21 +37,25 @@
     "@chakra-ui/theme-tools": "^2.0.14",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.10",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "concurrently": "^7.6.0",
     "express": "^4.17.3",
     "framer-motion": "^7.6.18",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/client-preset": "1.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.10",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "cra-bundle-analyzer": "^0.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.3",
